--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "afatmustafa/blade-hugeicons": "^0.0.3",
+        "andreiio/blade-remix-icon": "^3.5",
+        "codeat3/blade-eos-icons": "^1.14",
+        "codeat3/blade-phosphor-icons": "^2.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "mallardduck/blade-boxicons": "^2.4",
+        "owenvoke/blade-fontawesome": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
